--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -1,8 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
+    
+    <f:view locale="#{languageSwitcher.locale}">
+    
+    
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title><ui:insert name="windowTitle">#{msg.mainWindowTitle}</ui:insert>
@@ -14,6 +19,16 @@
 	  <ui:insert name="heading">
        #{msg.mainHeading}
      </ui:insert>
+            
+            
+            <div id="sidebar">          
+               <h:form id="langauge_form">
+                  <h:commandLink action="#{languageSwitcher.changeLanguage('pl')}" value="PL" /> |
+                  <h:commandLink action="#{languageSwitcher.changeLanguage('en')}" value="EN" />
+               </h:form>
+            </div>
+            
+            
     </div>
 	<div class="menuAndContent">
 	 <div class="menu">
@@ -26,4 +41,7 @@
        </div>
 	</div>
 </h:body>
+        
+          </f:view>
+        
 </html>
