--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,14 +1,15 @@
 body {
-   margin: 0;
-   padding: 0;
-   background-color:  lightGray;
-   font-family: Verdana, sans-serif;
+   margin: auto;
+ 
+   background-color:  yellow;
+   font-family: Arial, sans-serif;
    font-size: 0.9em;
+  
 }
 
 .heading {
   padding: 10px;
-  background: #FFFFFF;
+  background: red;
   border: 1px solid blue;
   font-size: 1.4em;
   font-style: italic;
@@ -17,33 +18,77 @@ body {
   height: 50px;
 }
 
-.menuAndContent {
-  width: 100%;
-  height: 100%;
-}
 
 .menu {
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-bottom: 20px;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow:2px 2px 3px #333;
+  padding: 20px;
   border: thin solid blue;
   position: absolute;
-  left: 10px;
-  height: 80%;
-  width: 200px;
-  background: #FFFFFF;
+  left: 65px;
+  height: 77%;
+  width: 250px;
+  text-decoration: none;
+  background: lightgreen;
   top: 90px;
 }
 
 .content {
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-bottom: 20px;
+    
+     border-radius: 0 10px 10px 0;
+    box-shadow:2px 2px 3px #333;
+    
+ padding: 20px;
   border: thin solid blue;
   background: #FFFFFF;	
   position:absolute;
-  left: 225px; 
+  left: 285px; 
   right: 65px;
   top: 90px;
-  height: 80%;
+  height: 77%;
+}
+
+#sidebar{
+    position: absolute;
+    right: 20px;
+    top: 10px;       
+}
+
+#supertabela{
+    
+    border-collapse: collapse;
+}
+
+#supertabela td, tr, th{
+    border: 1px solid;
+    padding: 3px;
+    text-align: center;
+    
+}
+
+ul li{
+    list-style: none;
+    font-color: red;
+    margin: 0 0 0 -110px;
+   padding: 5px;
+   text-align:center;
+   
+}
+
+body a, body a:link,body a:visited{
+text-decoration:none;
+color: blue;
+font-weight: bold;
+}
+
+body a:hover{
+text-decoration:none;
+color: blue;
+font-weight: bold;
+text-shadow:2px 2px 3px #333;
+}
+
+h1, h2{
+    margin: 0;
+    
 }
